# augorama_derive-rs

./: Cargo.toml  README.md
.github/workflows/: main.yaml
src/: lib.rs
tests/: auroute_test.rs  hellomacro_test.rs  macro_test.rs
