[package]
name = "augorama_derive"
version = "0.1.0"
authors = ["Ed Sweeney <ed@onextent.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
log = "0.4"
env_logger = "0.7"
warp = "0.1.20"
either = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-preview = "0.3.0-alpha.16"
serde = "1.0"
serde_json = "1.0"
syn = "0.14.4"
quote = "0.6.3"
