[package]
name = "augorama_derive"
version = "0.2.0"
authors = ["Ed Sweeney <ed@onextent.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
warp = "0.3.3"
tokio = { version = "1", features = ["full"] }
riker = "0.3.2"
riker-patterns = "0.3.2"
either = "1.5.3"
chrono = { version = "0.4.9", features = ["serde"] }
futures-preview = "0.3.0-alpha.19"
serde = "1.0.147"
serde_json = "1.0.41"
syn = "0.14.4"
quote = "0.6.13"
